cleaned up img folder and sub folders for project demo before it gets out of hand

--- a/destination.html
+++ b/destination.html
@@ -12,16 +12,16 @@
 	<!-- Hero images -->
 	<style>
 		.hero {
-			background-image: url(../img/banners/hero-sm.jpg);
+			background-image: url(../img/banners/destinations/banner-destination-croatia-480w.jpg);
 		}
-		@media screen and (min-width: 480px) {
-			.hero { background-image: url(../img/banners/hero-md.jpg); }
+		@media screen and (min-width: 640px) {
+			.hero { background-image: url(../img/banners/destinations/banner-destination-croatia-960w.jpg); }
 		}
-		@media screen and (min-width: 768px) {
-			.hero { background-image: url(../img/banners/hero-lg.jpg); }
+		@media screen and (min-width: 960px) {
+			.hero { background-image: url(../img/banners/destinations/banner-destination-croatia-1400w.jpg); }
 		}
-		@media screen and (min-width: 1200px) {
-			.hero { background-image: url(../img/banners/hero-xl.jpg); }
+		@media screen and (min-width: 1400px) {
+			.hero { background-image: url(../img/banners/destinations/banner-destination-croatia-2000w.jpg); }
 		}
 	</style>
 </head>
@@ -174,13 +174,13 @@
 			<section class="section-collapse">
 				<ul class="grid-x grid-padding-x list-image-grid list-unstyled">
 					<li class="cell medium-4">
-						<img src="./img/destination-feat-1.jpg" />
+						<img src="./img/articles/croatia-feat-sm-1.jpg" />
 					</li>
 					<li class="cell medium-4">
-						<img src="./img/destination-feat-1.jpg" />
+						<img src="./img/articles/croatia-feat-sm-1.jpg" />
 					</li>
 					<li class="cell medium-4">
-						<img src="./img/destination-feat-1.jpg" />
+						<img src="./img/articles/croatia-feat-sm-1.jpg" />
 					</li>
 				</ul>
 			</section>
@@ -194,7 +194,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -204,7 +204,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Kornati Islands &amp; Zadar</h3>
@@ -214,7 +214,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Istria &amp; Northern Adriatic</h3>
@@ -234,7 +234,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Monohull Yachts</h3>
@@ -244,7 +244,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Catamaran Yachts</h3>
@@ -254,7 +254,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Yachts with Permanent Crew</h3>
@@ -315,7 +315,7 @@
 					<ul class="article-list list-unstyled">
 						<li class="article-list-item">
 							<div class="article-list-image">
-								<a href="#"><img src="img/card-img-xl.jpg"></a>
+								<a href="#"><img src="img/articles/article-sm.jpg"></a>
 							</div>
 							<div class="article-list-content">
 								<a href="#" class="category-tag">Category</a>
@@ -325,7 +325,7 @@
 						</li>
 						<li class="article-list-item">
 							<div class="article-list-image">
-								<a href="#"><img src="img/card-img-xl.jpg"></a>
+								<a href="#"><img src="img/articles/article-sm.jpg"></a>
 							</div>
 							<div class="article-list-content">
 								<a href="#" class="category-tag">Category</a>
@@ -337,7 +337,7 @@
 						</li>
 						<li class="article-list-item">
 							<div class="article-list-image">
-								<a href="#"><img src="img/card-img-xl.jpg"></a>
+								<a href="#"><img src="img/articles/article-sm.jpg"></a>
 							</div>
 							<div class="article-list-content">
 								<a href="#" class="category-tag">Category</a>
