--- a/home.html
+++ b/home.html
@@ -109,20 +109,32 @@
 <div class="hero-carousel section-inverse" data-flickity>
 	<div class="hero-carousel-cell">
 		<div class="hero-carousel-cell-content">
-			<h3 class="hero-carousel-title">Slide label</h3>
+			<h3 class="hero-carousel-title">First Slide</h3>
 			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 			<a href="https://www.google.co.nz" class="button secondary">Button</a>
 		</div>
-		<img src="img/banners/home-banner-1.png" alt="">
+		<img src="img/banners/home/home-banner-2000w.jpg" alt="">
 	</div>
 	<div class="hero-carousel-cell">
-		<img src="img/banners/home-banner-1.png" alt="">
+		<div class="hero-carousel-cell-content">
+			<h3 class="hero-carousel-title">Second Slide</h3>
+			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+		</div>
+		<img src="img/banners/home/home-banner-2000w.jpg" alt="">
 	</div>
 	<div class="hero-carousel-cell">
-		<img src="img/banners/home-banner-1.png" alt="">
+		<div class="hero-carousel-cell-content">
+			<h3 class="hero-carousel-title">Third Slide</h3>
+			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+		</div>
+		<img src="img/banners/home/home-banner-2000w.jpg" alt="">
 	</div>
 	<div class="hero-carousel-cell">
-		<img src="img/banners/home-banner-1.png" alt="">
+		<div class="hero-carousel-cell-content">
+			<h3 class="hero-carousel-title">Fourth Slide</h3>
+			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+		</div>
+		<img src="img/banners/home/home-banner-2000w.jpg" alt="">
 	</div>
 </div>
 
@@ -271,7 +283,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -281,7 +293,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -291,7 +303,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -301,7 +313,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -311,7 +323,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -321,7 +333,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -331,7 +343,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -341,7 +353,7 @@
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</div>
 								<div class="card-section">
 									<h3 class="card-title">Southern Dalmatian Islands</h3>
@@ -369,7 +381,7 @@
 						<li class="article-list-item">
 							<div class="article-list-image">
 								<a href="#">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</a>
 							</div>
 							<div class="article-list-content">
@@ -383,7 +395,7 @@
 						<li class="article-list-item">
 							<div class="article-list-image">
 								<a href="#">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</a>
 							</div>
 							<div class="article-list-content">
@@ -397,7 +409,7 @@
 						<li class="article-list-item">
 							<div class="article-list-image">
 								<a href="#">
-									<img src="img/card-img-xl.jpg">
+									<img src="img/articles/article-sm.jpg">
 								</a>
 							</div>
 							<div class="article-list-content">
