--- a/yacht.html
+++ b/yacht.html
@@ -12,16 +12,16 @@
 	<!-- Hero images -->
 	<style>
 		.hero {
-			background-image: url(../img/banners/hero-sm.jpg);
+			background-image: url(../img/banners/yachts/hero-480w.jpg);
 		}
-		@media screen and (min-width: 480px) {
-			.hero { background-image: url(../img/banners/hero-md.jpg); }
+		@media screen and (min-width: 640px) {
+			.hero { background-image: url(../img/banners/yachts/hero-960w.jpg); }
 		}
-		@media screen and (min-width: 768px) {
-			.hero { background-image: url(../img/banners/hero-lg.jpg); }
+		@media screen and (min-width: 960px) {
+			.hero { background-image: url(../img/banners/yachts/hero-1400w.jpg); }
 		}
-		@media screen and (min-width: 1200px) {
-			.hero { background-image: url(../img/banners/hero-xl.jpg); }
+		@media screen and (min-width: 1400px) {
+			.hero { background-image: url(../img/banners/yachts/hero-2000w.jpg); }
 		}
 	</style>
 </head>
