added blog styles, plus added extra styles for list items and blockquotes

--- a/blog-post.html
+++ b/blog-post.html
@@ -153,14 +153,64 @@
 						<p>In the charter market, it has become common to find ‘bareboat’ charters with crew included to take care of the work and responsibility. Crew support allows you as charterer to relax and enjoy your holiday to the full. Here we explain the difference between ‘crewed bareboat’ and what we call the permanently-crewed charter boat.</p>
 						<p>Our offerings are sailboats ranging in size from 9-metre monohulls to 22-metre catamarans (and some motor cats). When we talk about crewed options, we are generally referring to the larger, roomy, well-appointed catamarans now so prevalent in the charter market. Boats such as the Lagoons 450 to 620, the Saba 50, Catana 55, and Sunreef semi-custom cats over 60ft. And some monohulls, like the Jeanneau 64 and the Hanse 575. These are serious sailboats that require hands on deck and below.</p>
 						<p>That’s not to say smaller boats cannot be chartered ‘crewed bareboat’ if you wish. Just about every bareboat on offer has a crew option. People doing this work are freelance, and if there’s room aboard for them to sleep and eat, there’s likely to be one in every port, ready, willing and able to take responsibility for the boat while you enjoy your sailing holiday. But getting back to the larger boats one would expect to see with crew aboard, it’s all about what’s best for you the charterer.</p>
-						<h3>Crewed bareboat vs. permanently-crewed charter: explaining the difference</h3>
+						<h2>Crewed bareboat vs. permanently-crewed charter: explaining the difference</h2>
 						<p>For the level of service that’s right for your group, you need to have the right people aboard, so consider the different crew options available. If you dream of a sailing holiday with family and friends but don’t have the full measure of experience or the confidence to charter full bareboat, rest easy. Support is at hand in the form of a crewed charter. But what is the difference between ‘crewed bareboat’ and ‘permanently crewed’? Consider the bareboat options available, select the model you dream of vacationing aboard, add a freelance contract skipper and you have a crewed bareboat charter.</p>
-						<p>The boat is domiciled in your chosen destination, as is your skipper, selected from a pool of professional sailors who work the season there. If you’d like some help with the catering, cooking and cleaning, hire a “hostess” too. But keep one important point in mind. Your “hostess” is not there to make up cabins and bathrooms. Unless you negotiate otherwise in advance, their cleaning role is limited to keeping the common areas - galley, saloon and cockpit - shipshape. These are people who know the boats, sailing grounds, local people, and attractions. They come aboard as part of your team, with experience to know what to do, how much support to offer, and how little to intrude.</p>
+						<ul>
+							<li>The boat is domiciled in your chosen destination</li>
+							<li>But of course they come at a cost</li>
+							<li>Their permanently employed crew members each has his and her pre-determined role</li>
+							<li>In the charter market, it has become common to find ‘bareboat’</li>
+						</ul>
+						<p>The boat is domiciled in your chosen destination, as is your skipper, selected from a pool of professional sailors who work the season there. If you’d like some help with the catering, cooking and cleaning, hire a “hostess” too. But keep one important point in mind. Your “hostess” is not there to make up cabins and bathrooms.</p>
+						<blockquote>Unless you negotiate otherwise in advance, their cleaning role is limited to keeping the common areas - galley, saloon and cockpit - shipshape. These are people who know the boats, sailing grounds, local people, and attractions. They come aboard as part of your team, with experience to know what to do, how much support to offer, and how little to intrude.</blockquote>
+						<h3>Crewed bareboat: a contradiction in terms?</h3>
 						<p>But of course they come at a cost. Consider the price, the boat’s capacity to accommodate them, and the dynamics of having one or two extra people aboard on your bareboat charter. Or don’t go sailing bareboat at all. Take a look at the specific boats that are available only with crew. These boats are generally at the top end of the size range and set up with luxury in mind.</p>
+						<ol>
+							<li>The boat is domiciled in your chosen destination</li>
+							<li>But of course they come at a cost</li>
+							<li>Their permanently employed crew members each has his and her pre-determined role</li>
+							<li>In the charter market, it has become common to find ‘bareboat’</li>
+						</ol>
 						<p>Their permanently employed crew members each has his and her pre-determined role, and they do all the work. That includes stocking the boat with provisions, managing all aspects of the boat, cleaning from stem to stern and treating you as hotel guests. Another step up in service, and in price. Of course if you want to take the helm for a stretch, or cook your catch of the day to your own favourite recipe, that’s never a problem, by arrangement with your willing crew.</p>
+
+						<div class="content-cta">
+							<a href="#" class="button button-icon-left"><i class="sc-icon-arrow-right"></i> Have Questions?</a>
+						</div>
+
 					</article>
-					<aside class="large-4 cell">
-						aside
+					<aside class="article-sidebar large-4 cell">
+						<div class="card">
+							<div class="card-image">
+								<img src="img/articles/article-sm.jpg">
+							</div>
+							<div class="card-section">
+								<p class="text-small">Relax aboard with your own skipper and hostess</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-image">
+								<img src="img/articles/article-sm.jpg">
+							</div>
+							<div class="card-section">
+								<p class="text-small">The main saloon on a Lagoon 52 with table set for guests</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-image">
+								<img src="img/articles/article-sm.jpg">
+							</div>
+							<div class="card-section">
+								<p class="text-small">Guest cabin on a larger crewed catamaran</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-image">
+								<img src="img/articles/article-sm.jpg">
+							</div>
+							<div class="card-section">
+								<p class="text-small">An experienced crew is what’s required on the big cat Sunreef 70</p>
+							</div>
+						</div>
 					</aside>
 				</div>
 
@@ -169,6 +219,62 @@
     </div><!-- large-12 cell -->
   </div><!-- grid-x grid-padding-x -->
 </div><!-- grid-container -->
+
+<section class="section-articles">
+	<div class="grid-container">
+		<div class="grid-x grid-padding-x">
+			<div class="cell">
+
+				<div class="content">
+					<h3 class="article-list-header">Related Blog Posts</h3>
+					<ul class="article-list list-unstyled">
+						<li class="article-list-item">
+							<div class="article-list-image">
+								<a href="#"><img src="img/articles/article-sm.jpg"></a>
+							</div>
+							<div class="article-list-content">
+								<a href="#" class="category-tag">Category</a>
+								<h4 class="article-list-title"><a href="#">A Sailing Holiday in Croatia</a></h4>
+								<p>Sail Connections’ Robert Cross recently took time out of the office for a two-week sailboat charter in Croatia. Here Robert reports on his sailing holiday adventure aboard a Dufour 350 travelling from Dubrovnik to Split return.</p>
+							</div>
+						</li>
+						<li class="article-list-item">
+							<div class="article-list-image">
+								<a href="#"><img src="img/articles/article-sm.jpg"></a>
+							</div>
+							<div class="article-list-content">
+								<a href="#" class="category-tag">Category</a>
+								<h4 class="article-list-title">
+									<a href="#">Chartering a sailboat with crew supplied</a>
+								</h4>
+								<p>A sailboat charter that includes a paid crew means one of two things: crewed bareboat with your party joined by freelance skipper and sometimes cook; or full-service charter on a boat with permanent, professional crew attached.</p>
+							</div>
+						</li>
+						<li class="article-list-item">
+							<div class="article-list-image">
+								<a href="#"><img src="img/articles/article-sm.jpg"></a>
+							</div>
+							<div class="article-list-content">
+								<a href="#" class="category-tag">Category</a>
+								<h4 class="article-list-title">
+									<a href="#">Your bareboat charter holiday in Croatia: what will it cost to stay in a marina?</a>
+								</h4>
+								<p>An ideal Croatian boat charter may mean overnighting in a quiet bay.Or perhaps hopping from town to town for fun and excitement. While the bay stopover may be free of charge, marina charges in Croatia can add up.</p>
+							</div>
+						</li>
+					</ul>
+					<div class="content-cta text-center">
+						<a href="#" class="button secondary">View more blog posts</a>
+					</div>
+				</div>
+
+			</div>
+			<!-- large-12 cell -->
+		</div>
+		<!-- grid-x grid-padding-x -->
+	</div>
+	<!-- grid-container -->
+</section>
 
 <section class="section-feature section-bg-grey">
   <div class="grid-container">
