added initial markup and styles for blog post

--- a/blog-post.html
+++ b/blog-post.html
@@ -8,22 +8,6 @@
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="node_modules/flickity/dist/flickity.min.css" media="screen">
 	<link rel="stylesheet" href="node_modules/flickity-fullscreen/fullscreen.css" media="screen">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> -->
-	<!-- Hero images -->
-	<style>
-		.hero {
-			background-image: url(../img/banners/default/banner-search-480w.jpg);
-		}
-		@media screen and (min-width: 640px) {
-			.hero { background-image: url(../img/banners/default/banner-search-960w.jpg); }
-		}
-		@media screen and (min-width: 960px) {
-			.hero { background-image: url(../img/banners/default/banner-search-1400w.jpg); }
-		}
-		@media screen and (min-width: 1400px) {
-			.hero { background-image: url(../img/banners/default/banner-search-2000w.jpg); }
-		}
-	</style>
 </head>
 <body>
   
@@ -129,7 +113,7 @@
 
 <div class="grid-container">
 	<div class="grid-x grid-padding-x">
-		<div class="large-12 cell">
+		<div class="medium-8 medium-offset-2 cell">
 
 			<section class="article">
 
@@ -141,78 +125,58 @@
 					</ul>
 				</nav>
 
-				<div class="grid-x grid-padding-x">
-					<article class="large-8 cell">
+				<article>
+					<header>
 						<h1>Chartering a sailboat with crew supplied</h1>
-						<div class="meta subheader">
+						<div class="meta">
 							<span class="meta-byline">October 16, 2017 By Robert Cross</span>
 							<span class="meta-category"><a href="#">Category</a></span>
 						</div>
-						<p>Consider a boat charter with paid crew members who takes care of all the responsibilities that come with sailing, and the housekeeping chores as well. It’s your holiday, and you are free to put all your energies into enjoying it. Charter a bareboat with skipper and/or cook to look after you and the boat. Or consider a charter that comes complete with permanent crew. Both options are available and can be quoted separately in the same proposal. But which is better for your group of sailing vacationers?</p>
-						<h2>Crewed bareboat vs. permanently-crewed charter: explaining the difference</h2>
-						<p>In the charter market, it has become common to find ‘bareboat’ charters with crew included to take care of the work and responsibility. Crew support allows you as charterer to relax and enjoy your holiday to the full. Here we explain the difference between ‘crewed bareboat’ and what we call the permanently-crewed charter boat.</p>
-						<p>Our offerings are sailboats ranging in size from 9-metre monohulls to 22-metre catamarans (and some motor cats). When we talk about crewed options, we are generally referring to the larger, roomy, well-appointed catamarans now so prevalent in the charter market. Boats such as the Lagoons 450 to 620, the Saba 50, Catana 55, and Sunreef semi-custom cats over 60ft. And some monohulls, like the Jeanneau 64 and the Hanse 575. These are serious sailboats that require hands on deck and below.</p>
-						<p>That’s not to say smaller boats cannot be chartered ‘crewed bareboat’ if you wish. Just about every bareboat on offer has a crew option. People doing this work are freelance, and if there’s room aboard for them to sleep and eat, there’s likely to be one in every port, ready, willing and able to take responsibility for the boat while you enjoy your sailing holiday. But getting back to the larger boats one would expect to see with crew aboard, it’s all about what’s best for you the charterer.</p>
-						<h2>Crewed bareboat vs. permanently-crewed charter: explaining the difference</h2>
-						<p>For the level of service that’s right for your group, you need to have the right people aboard, so consider the different crew options available. If you dream of a sailing holiday with family and friends but don’t have the full measure of experience or the confidence to charter full bareboat, rest easy. Support is at hand in the form of a crewed charter. But what is the difference between ‘crewed bareboat’ and ‘permanently crewed’? Consider the bareboat options available, select the model you dream of vacationing aboard, add a freelance contract skipper and you have a crewed bareboat charter.</p>
-						<ul>
-							<li>The boat is domiciled in your chosen destination</li>
-							<li>But of course they come at a cost</li>
-							<li>Their permanently employed crew members each has his and her pre-determined role</li>
-							<li>In the charter market, it has become common to find ‘bareboat’</li>
-						</ul>
-						<p>The boat is domiciled in your chosen destination, as is your skipper, selected from a pool of professional sailors who work the season there. If you’d like some help with the catering, cooking and cleaning, hire a “hostess” too. But keep one important point in mind. Your “hostess” is not there to make up cabins and bathrooms.</p>
-						<blockquote>Unless you negotiate otherwise in advance, their cleaning role is limited to keeping the common areas - galley, saloon and cockpit - shipshape. These are people who know the boats, sailing grounds, local people, and attractions. They come aboard as part of your team, with experience to know what to do, how much support to offer, and how little to intrude.</blockquote>
-						<h3>Crewed bareboat: a contradiction in terms?</h3>
-						<p>But of course they come at a cost. Consider the price, the boat’s capacity to accommodate them, and the dynamics of having one or two extra people aboard on your bareboat charter. Or don’t go sailing bareboat at all. Take a look at the specific boats that are available only with crew. These boats are generally at the top end of the size range and set up with luxury in mind.</p>
-						<ol>
-							<li>The boat is domiciled in your chosen destination</li>
-							<li>But of course they come at a cost</li>
-							<li>Their permanently employed crew members each has his and her pre-determined role</li>
-							<li>In the charter market, it has become common to find ‘bareboat’</li>
-						</ol>
-						<p>Their permanently employed crew members each has his and her pre-determined role, and they do all the work. That includes stocking the boat with provisions, managing all aspects of the boat, cleaning from stem to stern and treating you as hotel guests. Another step up in service, and in price. Of course if you want to take the helm for a stretch, or cook your catch of the day to your own favourite recipe, that’s never a problem, by arrangement with your willing crew.</p>
-
-						<div class="content-cta">
-							<a href="#" class="button button-icon-left"><i class="sc-icon-arrow-right"></i> Have Questions?</a>
-						</div>
-
-					</article>
-					<aside class="article-sidebar large-4 cell">
-						<div class="card">
-							<div class="card-image">
-								<img src="img/articles/article-sm.jpg">
-							</div>
-							<div class="card-section">
-								<p class="text-small">Relax aboard with your own skipper and hostess</p>
-							</div>
-						</div>
-						<div class="card">
-							<div class="card-image">
-								<img src="img/articles/article-sm.jpg">
-							</div>
-							<div class="card-section">
-								<p class="text-small">The main saloon on a Lagoon 52 with table set for guests</p>
-							</div>
-						</div>
-						<div class="card">
-							<div class="card-image">
-								<img src="img/articles/article-sm.jpg">
-							</div>
-							<div class="card-section">
-								<p class="text-small">Guest cabin on a larger crewed catamaran</p>
-							</div>
-						</div>
-						<div class="card">
-							<div class="card-image">
-								<img src="img/articles/article-sm.jpg">
-							</div>
-							<div class="card-section">
-								<p class="text-small">An experienced crew is what’s required on the big cat Sunreef 70</p>
-							</div>
-						</div>
-					</aside>
-				</div>
+					</header>
+					<p class="text-lead">Consider a boat charter with paid crew members who takes care of all the responsibilities that come with sailing, and the housekeeping chores as well.</p>
+					<p>Consider a boat charter with paid crew members who takes care of all the responsibilities that come with sailing, and the housekeeping chores as well. It’s your holiday, and you are free to put all your energies into enjoying it. Charter a bareboat with skipper and/or cook to look after you and the boat. Or consider a charter that comes complete with permanent crew. Both options are available and can be quoted separately in the same proposal. But which is better for your group of sailing vacationers?</p>
+					<figure>
+						<img src="img/banners/home/home-banner-2000w.jpg" alt="">
+						<figcaption>Chartering a <a href="#">with crew supplied</a></figcaption>
+					</figure>
+					<h2>Crewed bareboat vs. permanently-crewed charter: explaining the difference</h2>
+					<p>In the charter market, it has become common to find ‘bareboat’ charters with crew included to take care of the work and responsibility. Crew support allows you as charterer to relax and enjoy your holiday to the full. Here we explain the difference between ‘crewed bareboat’ and what we call the permanently-crewed charter boat.</p>
+					<p>Our offerings are sailboats ranging in size from 9-metre monohulls to 22-metre catamarans (and some motor cats). When we talk about crewed options, we are generally referring to the larger, roomy, well-appointed catamarans now so prevalent in the charter market. Boats such as the Lagoons 450 to 620, the Saba 50, Catana 55, and Sunreef semi-custom cats over 60ft. And some monohulls, like the Jeanneau 64 and the Hanse 575. These are serious sailboats that require hands on deck and below.</p>
+					<p>That’s not to say smaller boats cannot be chartered ‘crewed bareboat’ if you wish. Just about every bareboat on offer has a crew option. People doing this work are freelance, and if there’s room aboard for them to sleep and eat, there’s likely to be one in every port, ready, willing and able to take responsibility for the boat while you enjoy your sailing holiday. But getting back to the larger boats one would expect to see with crew aboard, it’s all about what’s best for you the charterer.</p>
+					<h3>Crewed bareboat vs. permanently-crewed charter: explaining the difference</h3>
+					<p>For the level of service that’s right for your group, you need to have the right people aboard, so consider the different crew options available. If you dream of a sailing holiday with family and friends but don’t have the full measure of experience or the confidence to charter full bareboat, rest easy. Support is at hand in the form of a crewed charter. But what is the difference between ‘crewed bareboat’ and ‘permanently crewed’? Consider the bareboat options available, select the model you dream of vacationing aboard, add a freelance contract skipper and you have a crewed bareboat charter.</p>
+					<figure>
+						<img src="img/banners/home/home-banner-2000w.jpg" alt="">
+					</figure>
+					<ul>
+						<li>The boat is domiciled in your chosen destination</li>
+						<li>But of course they come at a cost</li>
+						<li>Their permanently employed crew members each has his and her pre-determined role</li>
+						<li>In the charter market, it has become common to find ‘bareboat’</li>
+					</ul>
+					<p>The boat is domiciled in your chosen destination, as is your skipper, selected from a pool of professional sailors who work the season there. If you’d like some help with the catering, cooking and cleaning, hire a “hostess” too. But keep one important point in mind. Your “hostess” is not there to make up cabins and bathrooms.</p>
+					<blockquote>Unless you negotiate otherwise in advance, their cleaning role is limited to keeping the common areas - galley, saloon and cockpit - shipshape. These are people who know the boats, sailing grounds, local people, and attractions. They come aboard as part of your team, with experience to know what to do, how much support to offer, and how little to intrude.</blockquote>
+					<h3>Crewed bareboat: a contradiction in terms?</h3>
+					<p>But of course they come at a cost. Consider the price, the boat’s capacity to accommodate them, and the dynamics of having one or two extra people aboard on your bareboat charter. Or don’t go sailing bareboat at all. Take a look at the specific boats that are available only with crew. These boats are generally at the top end of the size range and set up with luxury in mind.</p>
+					<figure>
+						<img src="img/banners/home/home-banner-2000w.jpg" alt="">
+						<figcaption>Chartering a sailboat with crew supplied</figcaption>
+					</figure>
+					<ol>
+						<li>The boat is domiciled in your chosen destination</li>
+						<li>But of course they come at a cost</li>
+						<li>Their permanently employed crew members each has his and her pre-determined role</li>
+						<li>In the charter market, it has become common to find ‘bareboat’</li>
+					</ol>
+					<p>Their permanently employed crew members each has his and her pre-determined role, and they do all the work. That includes stocking the boat with provisions, managing all aspects of the boat, cleaning from stem to stern and treating you as hotel guests. Another step up in service, and in price. Of course if you want to take the helm for a stretch, or cook your catch of the day to your own favourite recipe, that’s never a problem, by arrangement with your willing crew.</p>
+				</article>
+				<aside class="article-sidebar text-center">
+					<div class="content-cta">
+						<a href="#" class="button button-icon-left">
+							<i class="sc-icon-arrow-right"></i> Have Questions?
+						</a>
+					</div>
+				</aside>
 
 			</section>
 
@@ -226,7 +190,7 @@
 			<div class="cell">
 
 				<div class="content">
-					<h3 class="article-list-header">Related Blog Posts</h3>
+					<h3 class="article-list-header text-center">Related Blog Posts</h3>
 					<ul class="article-list list-unstyled">
 						<li class="article-list-item">
 							<div class="article-list-image">
