--- a/destination.html
+++ b/destination.html
@@ -227,6 +227,56 @@
 			<section>
 				<div class="content">
 					<div class="content-cta text-center">
+						<h3 class="content-cta-title">Explore more about sailing in Croatia</h3>
+					</div>
+					<div class="card-list list-image-grid">
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/articles/article-sm.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Kornati Islands &amp; Zadar</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/articles/article-sm.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Istria &amp; Northern Adriatic</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<div class="content">
+					<div class="content-cta text-center">
+						<h3 class="content-cta-title">Explore more about sailing in Croatia</h3>
+					</div>
+					<div class="card-list list-image-grid">
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/articles/article-sm.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Kornati Islands &amp; Zadar</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<div class="content">
+					<div class="content-cta text-center">
 						<h3 class="content-cta-title">Browse our yachts for charter in Croatia</h3>
 					</div>
 					<div class="card-list list-image-grid">
